# rust-sql-test

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  atlas.hcl  config.toml  db_init.sh  flake.nix
.github/workflows/: pull_request.yml  push_main.yml
.sqlx/: query-2acd6205b12b1e9cadac7bcaa39a3a9bcc15faa4b8ffc881bdd953763994b987.json
src/: main.rs
