[package]
name = "rust-sql-test"
version = "0.0.1"
edition = "2021"
description = "Test out SQL things"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.10", features = ["derive", "env"]}
docker-api = "0.14.0"
futures = "0.3.30"
maud = { version = "0.25.0", features = ["axum"] }
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"]}
toml = "0.8.8"
tracing = "0.1.40"


url = "2.5.0"
signal-hook = "0.3.17"
service_conventions = "0.0.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
